Den update item gio hang: chua test hoan chinh